<resources>
    <string name="app_name">EPL</string>
    <string name="premier_league">Premier League</string>
    <string name="action_settings">Settings</string>

    <string name="club">Club</string>
    <string name="match_played">MP</string>
    <string name="goals_for">GF</string>
    <string name="goals_against">GA</string>
    <string name="points">Pts</string>
    <string name="title_activity_match_details">MatchDetailsActivity</string>
    <string name="starting_lineup">Starting Lineup</string>


    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
